products container overflow fix

--- a/apel/src/pages/map/styles.css
+++ b/apel/src/pages/map/styles.css
@@ -23,7 +23,7 @@
   position: absolute;
   top: 70px;
   right: -130px;
-  overflow: "scroll";
+  overflow-y: "scroll";
   transition: transform 100ms ease-in;
 }
 
